examples/fail/argprint.miniml
let id = fun id x is x;;
(id print) 42;;
